merge to JDK 8