@@ -21,9 +21,9 @@ public class ParseException extends RuntimeException {
     }
 
     /**
-     * @param message the error message
+     * @param message    the error message
      * @param lineNumber the line where the parsing exception happened
-     * @param fileName the file where parsing exception happened
+     * @param fileName   the file where parsing exception happened
      */
     public ParseException(String message, int lineNumber, String fileName) {
         this(message);
@@ -47,6 +47,6 @@ public class ParseException extends RuntimeException {
 
     @Override
     public String getMessage() {
-        return super.getMessage() + (lineNumber > -1 ? " In line: " + lineNumber : "") + (fileName != null && !fileName.isBlank() ? " of file: " + fileName : "");
+        return super.getMessage() + (lineNumber > -1 ? " In line: " + lineNumber : "") + (fileName != null && !fileName.trim().isEmpty() ? " of file: " + fileName : "");
     }
 }
